// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Views Basic view has correct markup 1`] = `
<div class="basic">
  <div class="wrapper">
    <typeselect-stub></typeselect-stub>
    <div class="line">
      forecast
    </div>
    <whenselect-stub></whenselect-stub>
    <div class="line">
      in
    </div>
    <locationselect-stub></locationselect-stub>
  </div>
  <basicweather-stub></basicweather-stub>
</div>
`;

exports[`Views Pro view has correct markup 1`] = `
<div class="pro">
  <div class="wrapper">
    <typeselect-stub></typeselect-stub>
    <div class="line">
      weather
    </div>
    <div class="line">
      in
    </div>
    <locationselect-stub></locationselect-stub>
  </div>
  <proweather-stub></proweather-stub>
</div>
`;
